@@ -1,11 +1,11 @@
 package com.gestionaleprenotazioni.formerjob.Mapper;
 
 import com.gestionaleprenotazioni.formerjob.Dto.UserDto;
+import com.gestionaleprenotazioni.formerjob.Model.Payment;
 import com.gestionaleprenotazioni.formerjob.Model.Ticket;
 import com.gestionaleprenotazioni.formerjob.Model.User;
 import org.springframework.stereotype.Component;
 
-import java.util.stream.Collectors;
 
 @Component
 public class UserMapper extends AbstractMapper<UserDto, User>
@@ -22,20 +22,19 @@ public class UserMapper extends AbstractMapper<UserDto, User>
         dto.setSurname(entity.getSurname());
         dto.setEmail(entity.getEmail());
         dto.setPassword(entity.getPassword());
-        dto.setTaxCode(entity.getTaxCode());
         dto.setDateOfBirth(entity.getDateOfBirth());
-        dto.setCreationDate(entity.getCreationDate());
-        dto.setStatus(entity.isStatus());
         dto.setRole(entity.getRole());
 
         if (entity.getTickets() != null) {
             dto.setTicketIds(entity.getTickets().stream()
                     .map(Ticket::getId)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
-        if (entity.getCart() != null) {
-            dto.setCartId(entity.getCart().getId());
+        if (entity.getPayments() != null) {
+            dto.setPaymentIds(entity.getPayments().stream()
+                    .map(Payment::getId)
+                    .toList());
         }
 
         return dto;
@@ -53,10 +52,7 @@ public class UserMapper extends AbstractMapper<UserDto, User>
         user.setSurname(dto.getSurname());
         user.setEmail(dto.getEmail());
         user.setPassword(dto.getPassword());
-        user.setTaxCode(dto.getTaxCode());
         user.setDateOfBirth(dto.getDateOfBirth());
-        user.setCreationDate(dto.getCreationDate());
-        user.setStatus(dto.isStatus());
         user.setRole(dto.getRole());
         return user;
     }
